--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0"
   }
 }
